- adjusted the collapse icon in Report Bugs center

--- a/app/compos/navbar/navbarStyling.css
+++ b/app/compos/navbar/navbarStyling.css
@@ -216,7 +216,7 @@ div.notificationsCenter-active {
             width: fit-content;
 
             img {
-                filter: brightness(0) saturate(100%) invert(92%) sepia(4%) saturate(308%) hue-rotate(9deg) brightness(91%) contrast(87%);
+                filter: var(--imgColor_dark_gray)
             }
         }
     }
